@startuml

title __APPDATA's Class Diagram__\n

  package programFunctions {
    package programFunctions.appData {
      class AppData {
          - users : List<String>
          - icon : Image
          - versionNumber : String
          + AppData()
          + getUsers()
          + getUserInterface()
          + getCurrentProfile()
          + getCache()
          + getGlobalSettings()
          + getVersionNumber()
          + getIcon()
          + setUsers()
          + setUserInterface()
          + setCurrentProfile()
          + setCache()
          + setVersionNumber()
      }
    }
  }
  

  package programFunctions {
    package programFunctions.appData {
      class Cache {
          - albumCards : ArrayList<Card>
          - deckCards : ArrayList<Card>
          - systemCards : ArrayList<Card>
          - albums : ArrayList<Album>
          - decks : ArrayList<Deck>
          + Cache()
          + Cache()
          {static} - loadSystemCards()
          + loadUserCards()
          + updateCache()
          + swapCard()
          + getAlbumCards()
          + getAlbumCardsString()
          + getDeckCards()
          + getSystemCards()
          + setAlbumCards()
          + setDeckCards()
          + setSystemCards()
          + removeCard()
          + addCard()
          + determineContainer()
          + getAlbums()
          + getDecks()
          + clone()
      }
    }
  }
  

  package programFunctions {
    package programFunctions.appData {
      class Settings {
          {static} + serialVersionUID : long
          - shoppingSite : int
          - region : int
          + Settings()
          + getShoppingSite()
          + getRegion()
          + setShoppingSite()
          + setRegion()
      }
    }
  }
  

  AppData o-- GUI : userInterface
  AppData o-- UserProfile : currentProfile
  AppData o-- Cache : cache
  AppData o-- Settings : globalSettings
  Settings -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
